2005/12/2 -- released version 20051202_trunk

2005/12/1 -- released version 20051201_trunk

2005/11/30 -- released version 20051130_trunk

2005/11/29 -- released version 20051129_trunk

2005/11/28 -- released version 20051128_trunk

2005/11/27 -- released version 20051127_trunk

2005/11/26 -- released version 20051126_trunk

2005/11/25 -- released version 20051125_trunk

* fixed spelling for height -- tobi

2005/11/24 -- released version 20051124_trunk

2005/11/23 -- released version 20051123_trunk

2005/11/22 -- released version 20051122_trunk

2005/11/21 -- released version 20051121_trunk

2005/11/20 -- released version 20051120_trunk

2005/11/19 -- released version 20051119_trunk

2005/11/18 -- released version 20051118_trunk

2005/11/17 -- released version 20051117_trunk

2005/11/16 -- released version 20051116_trunk

2005/11/15 -- released version 20051115_trunk

* remove the FPing 'timeout' variable, since it never really did anything
  -- niko
* use the 'cgiurl' variable from the 'General' section for all CGI self-refering 
  links -- niko, from Christian Hammers <ch .*debian.org> (Debian bug #339019)

2005/11/14 -- released version 20051114_trunk

2005/11/13 -- released version 20051113_trunk

2005/11/12 -- released version 20051112_trunk

2005/11/11 -- released version 20051111_trunk

2005/11/10 -- released version 20051110_trunk

2005/11/9 -- released version 20051109_trunk

2005/11/8 -- released version 20051108_trunk

2005/11/7 -- released version 20051107_trunk

* Curl.pm: don't take '0' for 'true' with the 'ssl2' or 'insecure_ssl' options
  -- niko, reported by Michael McCarn <mmccarn *sierracorp.us>

2005/11/6 -- released version 20051106_trunk

2005/11/5 -- released version 20051105_trunk

2005/11/4 -- released version 20051104_trunk

2005/11/3 -- released version 20051103_trunk

2005/11/2 -- released version 20051102_trunk

2005/11/1 -- released version 20051101_trunk

2005/10/31 -- released version 20051031_trunk
